--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
-recursive-include tcxreader *.tcx
+recursive-include tcxreader *
 recursive-include example_data *
 recursive-include examples *
 include LICENSE
